@@ -131,15 +131,15 @@ is.formula <- function(x) class(x) == "formula"
 format.data.table <- function (x, ..., justify="none") {
     format.item = function(x) {
         if (is.atomic(x) || is.formula(x)) # FR #2591 - format.data.table issue with columns of class "formula"
-            paste(c(head(x,6),if(length(x)>6)""),collapse=",")
+            paste(c(format(head(x,6), justify=justify, ...), if(length(x)>6)""),collapse=",")  # fix for #5435 - format has to be added here...
         else
             paste("<",class(x)[1L],">",sep="")
     }
     do.call("cbind",lapply(x,function(col,...){
         if (!is.null(dim(col))) stop("Invalid column: it has dimensions. Can't format it. If it's the result of data.table(table()), use as.data.table(table()) instead.")
-        if (is.list(col))
-            col = sapply(col,format.item)
-        format(col, justify=justify, ...)
+        if (is.list(col)) col = sapply(col, format.item)
+        else col = format(col, justify=justify, ...) # added an else here to fix #5435
+        col
     },...))
 }
 
